[package]
name = "test_contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false

[dependencies]
fracpack = { version = "0.1.0", path = "../../fracpack" }
libpsibase = { version = "0.1.0", path = "../../libpsibase" }
psi_macros = { version = "0.1.0", path = "../../psi_macros" }
